# bitis

./: .gitignore  Cargo.toml  LICENSE  README.md  dep_macros.txt  protocol.txt  test.bitis
bitis-macros/: Cargo.toml  README.md
bitis-macros/src/: lib.rs
cpp_lib/: CMakeLists.txt  bitis_lib.h  main.cpp
cpp_lib/test/: test.cpp
cpp_lib/tests/: CMakeLists.txt  test.cpp
src/: lib.rs  lib_berde.rs  main.rs  utils.rs
src/lib_impl/: berde.rs  compiler.rs  mod.rs
templates/: data_object_attr.cpp.jinja  data_object_attr.rs.jinja  data_object_attr_simple.rs.jinja  data_object_attr_type.cpp.jinja  data_object_eom_attr.rs.jinja  data_objects.cpp.jinja  data_objects.rs.jinja  data_oo_attr.rs.jinja  py_type_hints.pyi.jinja  pyclasses.py.rs.jinja  pyclasses_attr.py.rs.jinja  pyclasses_oo_attr.py.rs.jinja  pylib.py.rs.jinja
test_cases/impl/cpp_impl/src/: bitis_lib.h  helper.h  main.cpp  messages.h  messages.h.old
test_cases/impl/python_impl/: helper.py  main.py  main.py_lala
test_cases/impl/python_impl/py_msg/: Cargo.toml  (+1 more)
test_cases/impl/rust_impl/: Cargo.toml
test_cases/simple_msg/: build.sh  build_test.sh  main.cpp  main.rs  simple_msg.bitis
test_cases/simple_msg/cpp/: CMakeLists.txt
test_cases/simple_msg/rust/: Cargo.toml  cargo.toml
test_cases/t_array_msg/: array_msg.bitis  build.sh  main.cpp  main.py  main.rs
test_cases/t_dyn_int/: build.sh  dyn_int.bitis  main.cpp  main.rs
test_cases/t_enum_msg/: build.sh  enum_msg.bitis  main.cpp  main.py  main.rs
test_cases/t_kv_msg/: build.sh  kv_msg.bitis  main.cpp  main.rs
test_cases/t_nested_msg/: build.sh  main.cpp  main.py  main.rs  nested_msg.bitis
test_cases/t_oo_msg/: build.sh  main.cpp  main.py  main.rs  oo_msg.bitis
test_cases/t_opt_msg/: build.sh  main.cpp  main.rs  opt_msg.bitis
test_cases/t_simple_msg/: build.sh  main.cpp  main.py  main.py.bkp  main.rs  simple_msg.bitis
test_data/: test_simple_msg.bitis  test_simple_msg.rs  test_versioned_simple_msg.bitis  test_versioned_simple_msg.rs  test_versioned_simple_msg.v1.bitis  test_versioned_simple_msg.v2.bitis  test_versioned_simple_msg_base.bitis
test_data/test/: msgs.bitis
test_data/test/lib_lali/: Cargo.toml  pyproject.toml
test_data/test_cpp/: CMakeLists.txt  test_simple_msg.bitis
test_data/test_cpp/src/: bitis_lib.h  main.cpp  messages.cpp  messages.h
test_data/test_py/: build.sh  main.py  test_simple_msg.bitis
test_data/test_py/bitis/: Cargo.toml
test_data/test_py/bitis_msgs/: Cargo.toml  pyproject.toml
test_data/test_simple/: Cargo.toml  test_simple_msg.bitis
test_data/test_simple/src/: main.rs  messages.rs
test_data/test_simple_rs/: Cargo.toml  test_simple_msg.bitis
test_data/test_simple_rs/src/: main.rs  messages.rs
(+30 files in other folders)
