[package]
name = "bitis"
version = "0.5.0"
edition = "2021"
resolver = "2"

[lib]
name = "bitis_lib"
path = "src/lib.rs"

[[bin]]
name = "bitis"
path = "src/main.rs"

[dependencies]
logos = "0.15.0"
regex = "1.11.1"
askama = "0.12"
stringcase = "0.4.0"
clap = { version = "4.5.30", features = ["derive"] }
bitis-macros = { path = "./bitis-macros" }

[dev-dependencies]
rstest = "0.25.0"

