[package]
name = "bitis"
version = "0.5.2"
edition = "2024"
license = "MIT"
keywords = ["interface", "serialization", "bitwise", "data description language"]
description = "Bitwise serialization of messages defined in a data description language"
readme = "README.md"
homepage = "https://github.com/doheide/bitis"
repository = "https://github.com/doheide/bitis"


[lib]
name = "bitis_lib"
path = "src/lib.rs"

[[bin]]
name = "bitis"
path = "src/main.rs"

[dependencies]
logos = "0.15.0"
regex = "1.11.1"
askama = "0.12"
stringcase = "0.4.0"
clap = { version = "4.5.30", features = ["derive", "string", "cargo", "color", "help"] }
bitis-macros = { path = "./bitis-macros" }

[dev-dependencies]
rstest = "0.25.0"

