[package]
name = "bitis"
version = "0.9.1"
edition = "2024"
license = "MIT"
keywords = ["interface", "serialization", "bitwise", "DSL"]
description = "Bitwise serialization of messages defined in a data description language with interfaces for rust, python and c++."
readme = "README.md"
homepage = "https://github.com/doheide/bitis"
repository = "https://github.com/doheide/bitis"


[lib]
name = "bitis_lib"
path = "src/lib.rs"

[[bin]]
name = "bitis"
path = "src/main.rs"

[dependencies]
logos = "0.15.0"
regex = "1.11.1"
askama = "0.14"
stringcase = "0.4.0"
clap = { version = "4.5.30", features = ["derive", "string", "cargo", "color", "help"] }
console = "0.15.11"
toml_edit = "0.22.24"
# bitis-macros = "0.5.3"
array-init = "2.1"
ascii = "1.1.0"
bitis-macros = "0.9.1"
#bitis-macros = { path = "./bitis-macros" }


#[dependencies_when_dev]
#bitis-macros = { path = "./bitis-macros" }

[dev-dependencies]
rstest = "0.25.0"

