[package]
name = "bitis-macros"
version = "0.5.3"
edition = "2024"
license = "MIT"
keywords = ["interface", "serialization", "bitwise", "DSL"]
description = "Bitwise serialization of messages defined in a data description language"
readme = "README.md"
homepage = "https://github.com/doheide/bitis"
repository = "https://github.com/doheide/bitis"


[lib]
name = "bitis_macros"
path = "src/lib.rs"
proc-macro = true


[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
regex = "1.11.1"
